Migration to official Mojang mappings Added suffocation overlay opacity support